--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,19 @@
             <artifactId>itext</artifactId>
             <version>4.2.2</version>
         </dependency>
-		
+		<!--  
 		<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        -->
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		
 		<dependency>
             <groupId>javax.servlet</groupId>
