--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
 server.port=9900
 
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-
-#spring.datasource.url=jdbc:h2:mem:db_resume_builder;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#spring.jpa.hibernate.ddl-auto=create
-
-spring.datasource.url=jdbc:mysql://localhost:3306/resumebuilder?useSSL=false
-spring.datasource.username=root
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:db_resume_builder;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#spring.jpa.properties.hibernate.generate_statistics=true
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/resumebuilder1?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver=com.mysql.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
