--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ server.port=9900
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:db_resume_builder;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:h2:~/db_resume_builder;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.initialization-mode=never
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
@@ -15,6 +16,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.datasource.password=
 #spring.datasource.driver=com.mysql.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=update
+
+spring.social.google.appId=146005816020-maploa90hbugcjhv6luqd6f3hlbtk3o6.apps.googleusercontent.com
+spring.social.google.appSecret=7LO-TLlPcAWgUIXZhHWZIovS
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
